[package]
name = "sunform_as3parser_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sunform-as3parser = { path = "../crates/parser", version = "1" }
maplit = "1.0.2"
serde = { version = "1.0.192", features = ["rc", "derive"] }
serde_json = "1.0.108"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.4"
features = ["Document", "Window"]